--- a/BinarytoDecimal.html
+++ b/BinarytoDecimal.html
@@ -4,17 +4,24 @@
 <head>
 	<script src="BinarytoDecimal.js"></script>
 	<title>Binary-Decimal Converter</title>
-	<script>
-		function set_output() {
-			document.getElementById("output").innerHTML = "Decimal number: " + BinaryToDecimal(document.getElementById("bn").value).toString(10);
-		}
-	</script>
 </head>
 
 <body>
 	<input type="text" placeholder="Binary Number: " id="bn">
-	<button id="calc" onclick="set_output()">Calculate</button>
-	<p id="output">Decimal number: ____</p>
+	<button id="calc" onclick="setOutput()">Calculate</button>
+	<p id="output">Decimal number:</p>
+	<script>
+		function setOutput() {
+			document.getElementById("output").innerHTML = "Decimal number: " + BinaryToDecimal(document.getElementById("bn").value).toString(10);
+			document.getElementById("bn").value = null;
+		}
+		document.getElementById("bn").addEventListener("keyup", function (event) {
+			if (event.keyCode === 13) {
+				event.preventDefault();
+				document.getElementById("calc").click();
+			}
+		});
+	</script>
 </body>
 
 </html>
