--- a/BinarytoDecimal.html
+++ b/BinarytoDecimal.html
@@ -9,7 +9,7 @@
 
 <body>
 	<div class="container">
-		<input type="text" placeholder="Binary Number: " id="bn">
+		<input type="text" placeholder="Binary Number: " id="bn" autofocus>
 		<button id="calc" onclick="setOutput()">Calculate</button>
 		<p id="output">Decimal number:</p>
 	</div>
