change redirect path

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <script>
-        window.location.href = "BinarytoDecimal.html";
+        window.location.href = "/BinarytoDecimal/BinarytoDecimal.html";
     </script>
 
 </body>
