feat: update css to be more 'modern'

--- a/BinarytoDecimal.html
+++ b/BinarytoDecimal.html
@@ -21,7 +21,7 @@
 	</a>
 	<div class="container">
 		<input type="text" placeholder="Binary Number: " id="bn" autofocus>
-		<button id="calc" onclick="setOutput()">Calculate</button>
+		<input type="submit" id="calc" onclick="setOutput()" value="Calculate">
 		<p id="output">Decimal number:</p>
 	</div>
 	<script>
